@@ -13,9 +13,11 @@ Priority Issues (Fix These First)
 
 - shell parser rewrite
   - line 2986 - backslash backquote in double quotes not working...probably issue in compiler?
+  - line 3247 - nested process substitution - works on command line, not in jenkins
   - length substitution
       - does bash allow array elements?  even so, a different syntax in
         SparForte so maybe disallowed for compatibility reasons.
+  - quoting in ${:-`pwd`}, etc.
   - echo \\ ;
   - subword combination tests
   - fix all todos
@@ -547,7 +549,10 @@ New Unique Concepts
   - relations
     - business rules should have their own block as programmers may not be the
       one updating these rules.
+    - object-oriented rules (having data attached to rules)
     - the executable part of the when should not allow if or case statements
+    - investigate: SQL is very similar to rules pattern matching.  Can this be leveraged
+      as SparForte understands SQL?
     - examples:
 In its simplest form, we need a block for business
 users to enter options.  We would like to limit what
